--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "devDependencies": {
     "expect.js": "~0.2.0",
     "glob": "~3.2.7",
-    "grunt": "~0.4.0",
+    "grunt": "^0.4.5",
     "grunt-angular-templates": "^0.5.5",
     "grunt-cli": "~0.1.13",
     "grunt-contrib-clean": "~0.5.0",
@@ -30,6 +30,7 @@
     "grunt-filerev": "^0.2.1",
     "grunt-git-describe": "~2.3.2",
     "grunt-karma": "~0.8.3",
+    "grunt-ng-annotate": "^0.6.0",
     "grunt-ngmin": "0.0.3",
     "grunt-string-replace": "~0.2.4",
     "grunt-usemin": "^2.1.1",
